--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "embla-carousel-react": "^8.5.1",
     "framer-motion": "^11.14.0",
     "lucide-react": "^0.468.0",
-    "next": "15.0.4",
+    "next": "^15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^2.5.5",
@@ -38,6 +38,6 @@
     "eslint-config-next": "15.0.4",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5.7.3"
   }
 }
