--- a/package.json
+++ b/package.json
@@ -25,9 +25,10 @@
     "embla-carousel-react": "^8.5.1",
     "framer-motion": "^11.14.0",
     "lucide-react": "^0.468.0",
-    "next": "^15.1.6",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "next": "^15.2.4",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "resend": "^4.2.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
   },
